--- a/page/vercel.json
+++ b/page/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "page/page/wsgi.py",
+        "src": "page/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
